--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -176,10 +176,9 @@ header .navbar div.container-fluid div.offcanvas .encabezado-offcanvas {
 
     div {
         background-color: #222f3ebe;
-        width: 60vw;
-        padding-left: 40px;
+        width: 700px;
+        padding: 10px 40px 30px;
         margin-top: 20px;
-        padding-bottom: 30px;
         border-radius: 0 20px 20px 0;
 
         h1 {
